--- a/04 javascript/04 연산자.md
+++ b/04 javascript/04 연산자.md
@@ -91,11 +91,11 @@ console.log(() => {} instanceof Function); // true
 ### 16~17. `&&`, `||`
 |단축 평가 표현식|평가결과|
 |---|---|
-|`true || anything`|`true`|
-|`false || anything`|`anything`|
+|`true \|\| anything`|`true`|
+|`false \|\| anything`|`anything`|
 |`true && anything`|`anything`|
 |`false && anything`|`false`|
-### 18. Nullish 병합 연산자
+### 18. `??` Nullish 병합 연산자
 - 좌변이 `null` 또는 `undefined`일 경우에만 우변을 반환
 - `||`와 비슷하지만, `||`는 falsy 값인 경우에도 우변을 반환 
 - 정의되지 않았을 때만 대체한다는 점에서 `||`보다 훨씬 안정적 
@@ -113,8 +113,31 @@ console.log("" || "없음"); //없음
 console.log(false ?? true); //false
 console.log(false || true); //true
 ```
+### 20 `&&=`, `||=`, `??=`
+- 조건이 충족될 때만 대입됨
+```javascript
+// &&==
+let a = true;
+a &&= false;
+console.log(`a &&= false -> ${a}`); //a &&= false -> false
+
+// ||=
+let b = "";
+b ||= "대체됨";
+console.log(`b ||= "대체됨" -> ${b}`) //b ||= "대체됨" -> 대체됨
+
+// ??=
+let c = null;
+c ??= "기본값";
+console.log(`c ??= "기본값" -> ${c}`) //c ??= "기본값" -> 기본값
+
+let d = 0;
+d ??= 100;
+console.log(`d ??= "100" -> ${d}`) //d ??= "100" -> 0
+```
 ### 21 `,`
 - 여러 표현식을 한 줄에 나열하고, 맨 마지막 표현식의 결과만을 반환
+- 모든 표현식의 부수 효과는 남지만, 반환값은 마지막 표현식의 결과만 유지
 ```javascript
 let x = (1 + 2, 3 + 4);
 console.log(x); // 7
