실행 컨텍스트

--- a/04 javascript/13 화살표 함수.md
+++ b/04 javascript/13 화살표 함수.md
@@ -17,4 +17,17 @@ document.getElementById('btn').addEventListener('click', () => {
   - this 바인딩 방식이 일반 함수와 다름
     - 자신의 `this`를 가지지 않고, 상위 스코프의 `this` 참조
   - 객체 메서드로는 사용하지 않는 것이 좋음 (`this` 문제 때문)
+    - 화살표 함수의 `this`는 선언될 때의 외부 렉시컬 환경의 `this`를 사용
+    - 하지만 객체 메서드는 호출될 때 `this`가 그 객체 자신이 되기를 기대함
+    - ⚠️ 객체는 렉시컬 환경을 생성하지 않음 
+    ```javascript
+    const obj = {
+      name: "SeoYeon",
+      sayName: () => {
+        console.log(this.name);
+      }
+    };
+
+    obj.sayName(); // ❌ undefined
+    ```
 - 짧고 간단한 작업이라면 화살표 함수로 표현하는 것이 가독성 면에서 유리
