--- a/07 node.js/03 모듈.md
+++ b/07 node.js/03 모듈.md
@@ -1,6 +1,7 @@
 ## 모듈 (module)
 - 특정한 기능을 하는 함수나 변수들의 집합
-- 재사용 가능한 코드 조각
+- **재사용이 가능하고, 캡슐화가 가능하며, 유지보수에 유리**
+- **하나의 파일 = 하나의 모듈**
 <br/>
 
 ## 장점
@@ -11,6 +12,7 @@
 <br/>
 
 ## CJS (CommonJS)
+- 런타임에 동적 로딩 가능 (`require()` 만나면 로딩)
 ```javascript
 // math.js
 const add = (a, b) => a + b;
@@ -31,8 +33,10 @@ console.log(math.add(math.E, math.PI)); //9
 <br/>
 
 ## ESM (ES Modules)
-- `package.json`에 `"type": "module"` 설정 필요
+- `package.json`에 `"type": "module"` 설정 또는 파일 확장자 `.mjs`
 - `export default`: 해당 모듈에는 개체가 하나만 있다는 사실을 명확히 함
+- 정적 로딩 (컴파일 시점에 결정)
+- 비동기적 모듈 로딩과 순환 종속을 처리
 ```javascript
 // math.js
 const add = (a, b) => a + b;
@@ -43,4 +47,76 @@ export default add;
 import add from './math.js'
 
 console.log(add(3, 4))
+```
+### 화살표 함수
+```javascript
+export const addArrowFunction = (a, b) => {
+  return a + b;
+}
+```
+```javascript
+import { addArrowFunction } from './math.js'
+
+console.log(addArrowFunction(5, 3));
+```
+### 익명 함수 
+```javascript
+export const addAnonymousFunction = function (a, b) {
+  return a + b;
+}
+```
+```javascript
+import { addAnonymousFunction } from './math.js'
+
+console.log(addAnonymousFunction(9, 3));
+```
+### export default Object
+```javascript
+const defaultObject = {
+  add(a, b) {
+    return a + b;
+  }
+}
+
+export default defaultObject;
+```
+```javascript
+// 1️⃣
+import * as math from './math.js'
+console.log(math.default.add(13, 8));
+
+// 2️⃣ 
+import { default as defaultObject } from './math.js'
+
+console.log(defaultObject.add(17, 2));
+```
+### export default Function
+```javascript
+const defaultAddFunction = function (a, b) {
+  return a + b;
+}
+
+export default defaultAddFunction;
+```
+```javascript
+// 1️⃣ 모듈 전체 가져오기
+import * as math from './math.js'
+
+console.log(math.default(20, 11));
+
+// 2️⃣ default 모듈만 가져오기
+import { default as defaultAddFunction } from './math.js'
+
+console.log(defaultAddFunction(12, 16));
+```
+### export default Anonymous Function
+```javascript
+export default function (a, b) {
+  return a + b;
+}
+```
+```javascript
+import math from './math.js'
+
+console.log(math(2, 1));
 ```
