--- a/07 node.js/06 동적 폼 전송.md
+++ b/07 node.js/06 동적 폼 전송.md
@@ -14,7 +14,6 @@
   - 무언가를 생성하거나 어떤 정보를 보낼 때 쓰임
   - 보내야하는 데이터는 요청의 본문 (req.body)에 실어서 전송
   - 길이가 제한된 URL보다 많은 데이터를 body에 실어서 전송 가능
-### Get 요청
 ```javascript
 const express = require('express');
 const app = express();
@@ -24,13 +23,24 @@ app.set("view engine", "ejs");
 app.set("views", "./views");
 app.use("/views", express.static(__dirname + "/views"))
 
+// POST 요청을 위해 필요: body-parser 사용
+app.use(express.json());
+app.use(express.urlencoded({extended: false}))
+
 app.get('/', function(req, res) {
   res.render('form', {title: "폼 실습"})
 })
 
+// GET 요청
 app.get('/getForm', function(req, res){
   console.log(req.query);
   res.render('result', {userInfo: req.query})
+})
+
+// POST 요청
+app.post('/postForm', (req, res) => {
+  console.log(req.body);
+  res.render('result', {userInfo: req.body})
 })
 
 app.get('/test', function(req, res) {
